[package]
name = "bullet-hell"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14.2", features = ["dynamic_linking"] }
bevy_rapier2d = "0.27.0"
pathfinding = "4.11.0"
rand = "0.8.5"
futures = "0.3"
noise = "0.9.0"


# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
